--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-http-interface",
   "version": "0.0.1",
   "description": "Facades to consistently handle HTTP request/response regardless provider",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
