--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "serverless-http-interface",
   "version": "0.0.1",
   "description": "Facades to consistently handle HTTP request/response regardless provider",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prebuild": "chmod u+x scripts/*sh",
+    "build": "sh scripts/build.sh",
+    "test": "mocha --watch --require src/setupTests.js $(find src -name '*spec.js')"
   },
   "repository": {
     "type": "git",
@@ -25,5 +27,9 @@
   "homepage": "https://github.com/abdennour/serverless-http-interface#readme",
   "dependencies": {
     "read-yaml": "^1.1.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.0",
+    "uglify-es": "^3.3.10"
   }
 }
